Update Travis to the latest toolchain travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-dist: trusty
+dist: xenial
 sudo: required
 
 language: cpp
@@ -6,18 +6,11 @@ language: cpp
 addons:
   apt:
     packages:
-      - gcc-6
-      - g++-6
       - wine
-    sources:
-      - ubuntu-toolchain-r-test
 
 branches:
   only:
     - master
-
-install:
-  - export CXX="g++-6" CC="gcc-6"; $CXX --version
 
 script:
 # Fetch toolchain, set variables
@@ -36,15 +29,15 @@ script:
   - make
 # Build CEmu core and autotester_cli
   - git clone --recursive -b latest-stable --depth 1 https://github.com/CE-Programming/CEmu.git
-  - make -C CEmu/core -j4 CC=gcc-6 CXX=g++-6 LINK=g++-6
-  - make -C CEmu/tests/autotester -j4 CC=gcc-6 CXX=g++-6 LINK=g++-6
+  - make -C CEmu/core -j4
+  - make -C CEmu/tests/autotester -j4
   - export PATH=$(pwd)/CEmu/tests/autotester:$PATH
 # Grab ROM for tests below
   - export ROM_FILE_NAME=84pce_515_53.rom
   - curl -s https://tiplanet.org/scripts/travis/$ROM_FILE_NAME 2>/dev/null > $ROM_FILE_NAME
   - export AUTOTESTER_ROM=$(pwd)/$ROM_FILE_NAME
 # Test tests
-  - RESULT=0; for f in tests/*/*.json; do echo "Launching autotester: $f"; autotester "$f"; RESULT=`expr $RESULT + $?`; done; return $RESULT
+  - RESULT=0; for f in tests/*/*.json; do echo "Launching autotester on $f"; autotester "$f"; RESULT=`expr $RESULT + $?`; done; return $RESULT
 
 notifications:
   irc:
